- Renamed Core.Collections to Core.Collections.Generic - Added Core.Css namespace for later Css serialization support - Renamed Core.XAML to Core.ObjectiveXML, in favor of a non-proprietary standard - Renamed Core.UserInterface.Control to Core.UserInterface.Primitives.Control, making it a primitive user interface element - Renamed Core.UserInterface.primitives.Label to Core.UserInterface.LabelAdded, also adding separate implementation - Renamed Core.UserInterface.Control.xaml to Core.UserInterface.Control.oxml for compliance reasons - Renamed Spark.Theme.xaml to SparkTheme.oxml for compliance (and adequation) reasons

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es2015",
     "declaration": true,
     "outFile": "Built/Core.js",
     "module": "system",
@@ -8,5 +8,9 @@
   },
   "include": [
     "Sources/*.ts"
+  ],
+  "exclude": [
+    /// REVISION: User interface temporarily excluded for ObjectiveXML support implementation!!!
+    "Sources/Core.UserInterface.*.ts"
   ]
 }
