--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "target": "es2015",
     "declaration": true,
-    "outFile": "Built/Core.js",
-    "module": "system",
+    "outDir": "Built",
+    "module": "es2015",
     "sourceMap": true
   },
   "include": [
