--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "target": "es2015",
+    "target": "esnext",
     "declaration": true,
-    "outDir": "Built",
-    "module": "es2015",
+    "outDir": "Built/",
+    "moduleResolution": "node",
+    "module": "commonjs",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "types": ["reflect-metadata"],
     "sourceMap": true
   },
   "include": [
